--- a/index.html
+++ b/index.html
@@ -75,6 +75,67 @@ on<span> any schedule</span></h1>
 </div>
 </section>
 
+<!--feature section start-->
+<section class="feature p_bottom">
+  <div class="container">
+<div class="row">
+
+  <!--item one-->
+<div class="col-lg-3 col-sm-6">
+<div class="f_item text-center">
+<div class="f_img m-auto">
+<img src="images/pik3.png" class="img-fluid" alt="E-School">
+
+</div>
+<h2 class="f_h2">1500+ Topic</h2>
+<p class="f_p mb-0">Learn Anythings</p>
+
+</div>
+</div>
+<!--item one end-->
+<div class="col-lg-3 col-sm-6">
+<div class="f_item text-center">
+<div class="f_img m-auto">
+<img src="images/pik3.png" class="img-fluid" alt="E-School">
+
+</div>
+<h2 class="f_h2">1800+ Students</h2>
+<p class="f_p mb-0">Learn Anythings</p>
+
+</div>
+</div>
+<!--item one end-->
+<div class="col-lg-3 col-sm-6">
+<div class="f_item text-center">
+<div class="f_img m-auto">
+<img src="images/pik3.png" class="img-fluid" alt="E-School">
+
+</div>
+<h2 class="f_h2">9K+ Test Token</h2>
+<p class="f_p mb-0">Learn Anythings</p>
+
+</div>
+</div>
+<!--item one end-->
+<div class="col-lg-3 col-sm-6">
+<div class="f_item text-center">
+<div class="f_img m-auto">
+<img src="images/pik3.png" class="img-fluid" alt="E-School">
+
+</div>
+<h2 class="f_h2">2000+ Student</h2>
+<p class="f_p mb-0">Learn Anythings</p>
+
+</div>
+</div>
+<!--item one end-->
+
+
+</div>
+</div>
+ </section>
+
+<!--feature section end-->
 
 
 
@@ -90,7 +151,6 @@ on<span> any schedule</span></h1>
 
 
 
-<!--hero section end-->
 
 
 
