--- a/index.html
+++ b/index.html
@@ -137,8 +137,111 @@ on<span> any schedule</span></h1>
 
 <!--feature section end-->
 
+<!--course section start-->
+<section class="course p_bottom">
+  <div class="container">
+<div class="row">
+<div class="col-lg-12">
+<div class="c_h1 text-center">
+<h1 class="mb-0">Online Courses</h1>
 
 
+
+</div>
+</div>
+</div>
+
+<div class="row">
+  <!--item start-->
+  <div class="col-lg-4">
+<div class="co_item">
+<div class="co_img">
+<img src="images/pic1.png" class="w-100" alt="E-School">
+</div>
+<h2 class="co_h2">Modern Psychology</h2>
+<p class="co_p mb-0">Designation</p>
+<a href="#" class="btn btn_sv btn_co">Buy Course</a>
+<div class="co_footer overflow-hidden">
+<div class="co_left float-start">
+  <ul class="list-inline mb-0">
+    <li class="list-inline-item cli"><img src="images/icon1.png" class="img-fluid" alt="E-School"></li>
+    <li class="list-inline-item cli"><span>Start 20  April, 2021</span>  </li>
+  </ul>
+
+</div>
+<div class="co_right float-end">
+ <ul class="list-inline mb-0">
+    <li class="list-inline-item cli"><img src="images/icon2.png" class="img-fluid" alt="E-School"></li>
+    <li class="list-inline-item cli"><span>60 seats</span>  </li>
+  </ul>
+</div>
+</div>
+</div>
+</div>
+<!--item end-->
+
+ <!--item start-->
+  <div class="col-lg-4">
+<div class="co_item">
+<div class="co_img">
+<img src="images/pic1.png" class="w-100" alt="E-School">
+</div>
+<h2 class="co_h2">Modern Psychology</h2>
+<p class="co_p mb-0">Designation</p>
+<a href="#" class="btn btn_sv btn_co">Buy Course</a>
+<div class="co_footer overflow-hidden">
+<div class="co_left float-start">
+  <ul class="list-inline mb-0">
+    <li class="list-inline-item cli"><img src="images/icon1.png" class="img-fluid" alt="E-School"></li>
+    <li class="list-inline-item cli"><span>Start 20  April, 2021</span>  </li>
+  </ul>
+
+</div>
+<div class="co_right float-end">
+ <ul class="list-inline mb-0">
+    <li class="list-inline-item cli"><img src="images/icon2.png" class="img-fluid" alt="E-School"></li>
+    <li class="list-inline-item cli"><span>60 seats</span>  </li>
+  </ul>
+</div>
+</div>
+</div>
+</div>
+<!--item end-->
+ <!--item start-->
+  <div class="col-lg-4">
+<div class="co_item">
+<div class="co_img">
+<img src="images/pic1.png" class="w-100" alt="E-School">
+</div>
+<h2 class="co_h2">Modern Psychology</h2>
+<p class="co_p mb-0">Designation</p>
+<a href="#" class="btn btn_sv btn_co">Buy Course</a>
+<div class="co_footer overflow-hidden">
+<div class="co_left float-start">
+  <ul class="list-inline mb-0">
+    <li class="list-inline-item cli"><img src="images/icon1.png" class="img-fluid" alt="E-School"></li>
+    <li class="list-inline-item cli"><span>Start 20  April, 2021</span>  </li>
+  </ul>
+
+</div>
+<div class="co_right float-end">
+ <ul class="list-inline mb-0">
+    <li class="list-inline-item cli"><img src="images/icon2.png" class="img-fluid" alt="E-School"></li>
+    <li class="list-inline-item cli"><span>60 seats</span>  </li>
+  </ul>
+</div>
+</div>
+</div>
+</div>
+<!--item end-->
+</div>
+
+
+
+
+</div>
+</section>
+<!--course section end-->
 
 
 
