--- a/index.html
+++ b/index.html
@@ -242,6 +242,90 @@ on<span> any schedule</span></h1>
 </div>
 </section>
 <!--course section end-->
+<!--testimonial section start-->
+<section class="testimonial">
+  <div class="container">
+<div class="row">
+<div class="col-lg-12">
+<div class="c_h1 text-center">
+<h1 class="mb-0">Testimonial</h1>
+
+
+
+</div>
+</div>
+</div>
+
+<div class="row justify-content-center">
+  <div class="col-lg-8 col-md-10">
+<!--slider--start-->
+<div id="cei" class="carousel slide" data-bs-ride="carousel">
+  
+  <div class="carousel-inner">
+<!--item-start-->
+
+    <div class="carousel-item active t_item">
+      <div class="row align-items-center">
+<div class="col-md-3">
+  <div class="t_img">
+<img src="images/person.png" class="img-fluid" alt="E-School">
+</div>
+</div>
+<div class="col-md-9">
+  <div class="t_text">
+<p class="mb-0">There are many variations of passages of Lorem Ipsum available, but the
+ majority have suffered alteration in some form, by injected humour, 
+or randomised words which don't look even slightly believable.</p>
+</div>
+</div>
+</div>
+</div>
+<!--item-end-->
+   <div class="carousel-item t_item">
+      <div class="row align-items-center">
+<div class="col-md-3">
+  <div class="t_img">
+<img src="images/person.png" class="img-fluid" alt="E-School">
+</div>
+</div>
+<div class="col-md-9">
+  <div class="t_text">
+<p class="mb-0">There are many variations of passages of Lorem Ipsum available, but the
+ majority have suffered alteration in some form, by injected humour, 
+or randomised words which don't look even slightly believable.</p>
+</div>
+</div>
+</div>
+</div>
+<!--item-end-->
+
+
+<div class="carousel-item t_item">
+      <div class="row align-items-center">
+<div class="col-md-3">
+  <div class="t_img">
+<img src="images/person.png" class="img-fluid" alt="E-School">
+</div>
+</div>
+<div class="col-md-9">
+  <div class="t_text">
+<p class="mb-0">There are many variations of passages of Lorem Ipsum available, but the
+ majority have suffered alteration in some form, by injected humour, 
+or randomised words which don't look even slightly believable.</p>
+</div>
+</div>
+</div>
+</div>
+<!--item-end-->
+  </div>
+</div>
+<!--slider--end-->
+</div>
+</div>
+</div>
+</section>
+
+<!--testimonial section end-->
 
 
 
