--- a/index.html
+++ b/index.html
@@ -316,6 +316,64 @@ or randomised words which don't look even slightly believable.</p>
 </div>
 </section>
 <!--testimonial section end-->
+<!--footer section start-->
+<section class="footer_top">
+  <div class="container">
+<div class="row">
+<div class="col-lg-5 col-sm-12">
+<div class="ft_details">
+<p>Millions of people of all ages and from around
+the world are improving their lives with us</p>
+
+</div>
+</div>
+<div class="col-lg col-sm-4">
+  <div class="ft_links">
+<h2>Course</h2>
+<ul class="list-unstyled mb-0">
+  <li><a href="#">Grapic Design </a></li>
+ <li><a href="#">Web Design </a></li>
+ <li><a href="#">Business </a></li>
+ <li><a href="#">Marketing </a></li>
+ <li><a href="#">Engineering </a></li>
+</ul>
+</div>
+</div>
+<div class="col-lg col-sm-4">
+   <div class="ft_links">
+<h2>Terms</h2>
+<ul class="list-unstyled mb-0">
+  <li><a href="#">Grapic Design </a></li>
+ <li><a href="#">Web Design </a></li>
+ <li><a href="#">Business </a></li>
+ <li><a href="#">Marketing </a></li>
+ <li><a href="#">Engineering </a></li>
+</ul>
+</div>
+</div>
+<div class="col-lg col-sm-4">
+   <div class="ft_links">
+<h2>Useful Link</h2>
+<ul class="list-unstyled mb-0">
+  <li><a href="#">Grapic Design </a></li>
+ <li><a href="#">Web Design </a></li>
+ <li><a href="#">Business </a></li>
+ <li><a href="#">Marketing </a></li>
+ <li><a href="#">Engineering </a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</section>
+<!--footer section end-->
+<!--footer down section start-->
+<footer>
+  <p class="mb-0 text-center">Copyright © 2020 <a href="#" class="text-decoration-none">Rihankabir</a></p>
+</footer>
+
+<!--footer down section end-->
+
 
 
 
