--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </li>
 
       </ul>
-      <a href="#" class="btn btn_sv btn_sw">sign in</a>
+      <a href="#" class="btn btn_sv btn_sw">Sign in</a>
     </div>
   </div>
 </nav>
